# CLIck-Me-Codex2

./: README.md  pyproject.toml
config/: .env.example
docs/: USAGE.md
src/cli_intro/: app.py
src/cli_intro/controllers/: intro_controller.py
src/cli_intro/models/: profile.py
src/cli_intro/services/: profile_service.py
src/cli_intro/utils/: logger.py
tests/: test_app.py
